--- a/core/templates/web/certification.html
+++ b/core/templates/web/certification.html
@@ -29,8 +29,7 @@
                             <img src="/static/images/web/left-top.png">
                         </div>
                         <div class="education-text ">
-                            <p>在什么情况下，</p>
-                            <p>你该考虑学历学位认证？</p>
+                            <p>什么是学历学位认证？</p>
                         </div>
                         <div style="text-align:right">
                             <img src="/static/images/web/right-down.png">
