--- a/core/templates/web/mxztc.html
+++ b/core/templates/web/mxztc.html
@@ -94,7 +94,7 @@
             </div>
             <div class="col-md-4 animate-box fadeInUp animated ">
                 <div class="hexoco-project-item">
-                    <img src="/static/images/web/testimg1.jpg" alt="Image" class="img-responsive">
+                    <img src="/static/images/web/byzt-01.png" alt="Image" class="img-responsive">
                     <div class="hexoco-text">
                         <h2>哈弗大学</h2>
                         <p>US News Rank 2</p>
@@ -103,7 +103,7 @@
             </div>
             <div class="col-md-4 animate-box fadeInUp animated">
                 <div class="hexoco-project-item">
-                    <img src="/static/images/web/testimg1.jpg" alt="Image" class="img-responsive">
+                    <img src="/static/images/web/byzt-02.png" alt="Image" class="img-responsive">
                     <div class="hexoco-text">
                         <h2>耶鲁大学</h2>
                         <p>US News Rank 3</p>
@@ -112,7 +112,7 @@
             </div>
             <div class="col-md-4 animate-box fadeInUp animated">
                 <div class="hexoco-project-item">
-                    <img src="/static/images/web/testimg1.jpg" alt="Image" class="img-responsive">
+                    <img src="/static/images/web/byzt-03.png" alt="Image" class="img-responsive">
                     <div class="hexoco-text">
                         <h2>斯坦福大学</h2>
                         <p>US News Rank 5</p>
@@ -121,7 +121,7 @@
             </div>
             <div class="col-md-4 animate-box fadeInUp animated">
                 <div class="hexoco-project-item">
-                    <img src="/static/images/web/testimg1.jpg" alt="Image" class="img-responsive">
+                    <img src="/static/images/web/byzt-04.png" alt="Image" class="img-responsive">
                     <div class="hexoco-text">
                         <h2>哥伦比亚大学</h2>
                         <p>US News Rank 5</p>
@@ -130,7 +130,7 @@
             </div>
             <div class="col-md-4 animate-box fadeInUp animated">
                 <div class="hexoco-project-item">
-                    <img src="/static/images/web/testimg1.jpg" alt="Image" class="img-responsive">
+                    <img src="/static/images/web/byzt-05.png" alt="Image" class="img-responsive">
                     <div class="hexoco-text">
                         <h2>宾夕法尼亚大学</h2>
                         <p>US News Rank 8</p>
@@ -139,7 +139,7 @@
             </div>
             <div class="col-md-4 animate-box fadeInUp animated">
                 <div class="hexoco-project-item">
-                    <img src="/static/images/web/testimg1.jpg" alt="Image" class="img-responsive">
+                    <img src="/static/images/web/byzt-06.png" alt="Image" class="img-responsive">
                     <div class="hexoco-text">
                         <h2>约翰霍普金斯大学</h2>
                         <p>US News Rank 10</p>
@@ -148,7 +148,7 @@
             </div>
             <div class="col-md-4 animate-box fadeInUp animated">
                 <div class="hexoco-project-item">
-                    <img src="/static/images/web/testimg1.jpg" alt="Image" class="img-responsive">
+                    <img src="/static/images/web/byzt-07.png" alt="Image" class="img-responsive">
                     <div class="hexoco-text">
                         <h2>南加州大学</h2>
                         <p>US News Rank 23</p>
@@ -157,7 +157,7 @@
             </div>
             <div class="col-md-4 animate-box fadeInUp animated">
                 <div class="hexoco-project-item">
-                    <img src="/static/images/web/testimg1.jpg" alt="Image" class="img-responsive">
+                    <img src="/static/images/web/byzt-08.png" alt="Image" class="img-responsive">
                     <div class="hexoco-text">
                         <h2>加州大学欧文分校</h2>
                         <p>US News Rank 39</p>
@@ -166,7 +166,7 @@
             </div>
             <div class="col-md-4 animate-box fadeInUp animated">
                 <div class="hexoco-project-item">
-                    <img src="/static/images/web/testimg1.jpg" alt="Image" class="img-responsive">
+                    <img src="/static/images/web/byzt-09.png" alt="Image" class="img-responsive">
                     <div class="hexoco-text">
                         <h2>丹佛大学</h2>
                         <p>US News Rank 86</p>
@@ -179,7 +179,7 @@
             </div>
             <div class="col-md-4 animate-box fadeInUp animated">
                 <div class="hexoco-project-item">
-                    <img src="/static/images/web/testimg1.jpg" alt="Image" class="img-responsive">
+                    <img src="/static/images/web/canada-01.png" alt="Image" class="img-responsive">
                     <div class="hexoco-text">
 
                         <h2>英属哥伦比亚大学</h2>
@@ -189,7 +189,7 @@
             </div>
             <div class="col-md-4 animate-box fadeInUp animated">
                 <div class="hexoco-project-item">
-                    <img src="/static/images/web/testimg1.jpg" alt="Image" class="img-responsive">
+                    <img src="/static/images/web/canada-02.png" alt="Image" class="img-responsive">
                     <div class="hexoco-text">
                         <h2>西蒙弗雷泽大学</h2>
                     </div>
@@ -197,7 +197,7 @@
             </div>
             <div class="col-md-4 animate-box fadeInUp animated">
                 <div class="hexoco-project-item">
-                    <img src="/static/images/web/testimg1.jpg" alt="Image" class="img-responsive">
+                    <img src="/static/images/web/canada-03.png" alt="Image" class="img-responsive">
                     <div class="hexoco-text">
                         <h2>维多利亚大学</h2>
 {#                        <p>US News Rank 1000</p>#}
@@ -248,7 +248,7 @@
             <div class="row text-center" id="anli">
                 <h1>成功案例</h1>
             </div>
-            <div class="rows">
+            <div class="container">
 					<div id="owl-car" class="owl-carousel owl-carousel-fullwidth ">
 
                         <div class="item testimony-slide active text-center">
@@ -280,21 +280,21 @@
                             </figure>
                         </div>
 
-
-                        <div class="item testimony-slide active text-center">
-                            <figure>
-                                <a  data-fancybox="gallery" href="/static/images/web/t1.png">
-                                    <img src="/static/images/web/t1.png" alt="user">
-                                </a>
-                            </figure>
-                        </div>
-                        <div class="item testimony-slide active text-center">
-                            <figure>
-                                <a  data-fancybox="gallery" href="/static/images/web/t2.png">
-                                    <img src="/static/images/web/t2.png" alt="user">
-                                </a>
-                            </figure>
-                        </div>
+{##}
+{#                        <div class="item testimony-slide active text-center">#}
+{#                            <figure>#}
+{#                                <a  data-fancybox="gallery" href="/static/images/web/t1.png">#}
+{#                                    <img src="/static/images/web/t1.png" alt="user">#}
+{#                                </a>#}
+{#                            </figure>#}
+{#                        </div>#}
+{#                        <div class="item testimony-slide active text-center">#}
+{#                            <figure>#}
+{#                                <a  data-fancybox="gallery" href="/static/images/web/t2.png">#}
+{#                                    <img src="/static/images/web/t2.png" alt="user">#}
+{#                                </a>#}
+{#                            </figure>#}
+{#                        </div>#}
 
                     </div>
 
