--- a/core/templates/web/assistedliving.html
+++ b/core/templates/web/assistedliving.html
@@ -45,29 +45,29 @@
 
 {% endblock %}
 
-{% block body %}data-spy="scroll" data-target=".js-navbar-scrollspy" data-offset="70"{% endblock %}
+{% block body %}data-spy="scroll" data-target=".js-navbar-scrollspy" data-offset="170"{% endblock %}
 
 {% block content %}
-    <nav class="navbar navbar-fixed-top carousel-margin" style="background:#fff" role="navigation">
+    <nav class="navbar navbar-fixed-top c-margin" style="background:#fff; margin-top: 68px;" role="navigation">
         <div class="container">
             <div class="js-navbar-scrollspy">
                 <ul class="nav am-tabs-nav">
                     <li class="col-md-4"><a href="#as">
-                        <div class="col-md-3 col-sm-3 am-padding-right-0">
+                        <div class="col-md-3 col-sm-3 ">
                             <i class="icon-truck"></i>
                         </div>
                         <div class="col-md-9 col-sm-9 text-left">
                             <strong class="nav-text">免税车购置服务</strong>
                         </div></a></li>
                     <li class="col-md-4"><a href="#weiguanjia">
-                        <div class="col-md-3 col-sm-3 am-padding-right-0">
+                        <div class="col-md-3 col-sm-3 ">
                             <i class="icon-home3"></i>
                         </div>
                         <div class="col-md-9 col-sm-9 text-left">
                             <strong class="nav-text">恒心微管家</strong>
                         </div></a></li>
                     <li class="col-md-4"><a href="#loanid">
-                        <div class="col-md-3 col-sm-3 am-padding-right-0">
+                        <div class="col-md-3 col-sm-3 ">
                             <i class="icon-coin-yen"></i>
                         </div>
                         <div class="col-md-9 col-sm-9 text-left">
@@ -81,7 +81,8 @@
     <div class="course-header carousel-margin " id="">
         <img src="/static/images/web/courseheader.png">
     </div>
-    <div style="background: #fff;position: relative;"><label id="as" style="font-size:40px;">&nbsp;</label></div>
+
+    <div style="background: #fff;position: relative;"><label id="as" style="font-size:83px;">&nbsp;</label></div>
     <div style="background: url(../../static/images/web/twoBg.jpg) repeat-x scroll center bottom;">
 
         <div class="container" style="margin-top:0em;" >
@@ -227,7 +228,7 @@
 
         </div>
     </div>
-    <div style="background: #efefef;position: relative;"><label id="weiguanjia" style="font-size:40px;">&nbsp;</label></div>
+    <div style="background: #efefef;position: relative;"><label id="weiguanjia" style="font-size:83px;">&nbsp;</label></div>
     <div style="background: #efefef;" >
         <div class="container" style="padding-top:0;"  >
             <div class="row">
@@ -320,7 +321,7 @@
             </div>
         </div>
     </div>
-    <div style="background: #fff;position: relative;"><label id="loanid" style="font-size:40px;">&nbsp;</label></div>
+    <div style="background: #fff;position: relative;"><label id="loanid" style="font-size:83px;">&nbsp;</label></div>
     <div class="container" style="margin-top:0;" >
         <div class="row">
             <div class="col-md-8 col-md-offset-2 text-center heading-section animate-box fadeInUp animated">
