--- a/core/templates/web/index.html
+++ b/core/templates/web/index.html
@@ -344,7 +344,7 @@
                 <div class="row feature-title text-center" id="anli">
                     <h3>我们的成功案例</h3>
                 </div>
-                <div class="rows">
+                <div class="container">
                     <div id="owl-car" class="owl-carousel owl-carousel-fullwidth ">
 
                         <div class="item testimony-slide active text-center">
