--- a/core/templates/user/master.html
+++ b/core/templates/user/master.html
@@ -5,8 +5,8 @@
     {% load staticfiles %}
     <meta charset="utf-8" />
     <title>恒心前途后台管理系统{% block title %} {%  endblock %}</title>
-    <meta name="keywords" content="四川恒心前途教育咨询有限公司-后台管理系统" />
-    <meta name="description" content="四川恒心前途教育咨询有限公司-后台管理系统" />
+    <meta name="keywords" content="四川恒心前途教育咨询有限公司-用户中心系统" />
+    <meta name="description" content="四川恒心前途教育咨询有限公司-用户中心系统" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href={% static "css/bootstrap.min.css" %} rel="stylesheet" />
     <link rel="stylesheet" href={% static "css/font-awesome.min.css" %} />
@@ -49,8 +49,8 @@
     <!-- <![endif]-->
 
     <!--[if IE]>
-<script src="/static/js/jquery-1.11.3.min.js"></script>
-<![endif]-->
+    <script src="/static/js/jquery-1.11.3.min.js"></script>
+    <![endif]-->
     <script src={% static "js/bootstrap.min.js" %}></script>
     <script src="/static/js/ace-elements.min.js"></script>
     <script src={% static "js/ace.min.js" %}></script>
