--- a/core/templates/backend/master_admin.html
+++ b/core/templates/backend/master_admin.html
@@ -475,6 +475,16 @@
 
                     <b class="arrow"></b>
                 </li>
+
+                <li id="li_user" class="">
+                    <a href="/r/flow">
+                        <i class="menu-icon fa fa-pencil-square-o"></i>
+                        <span class="menu-text"> 流程管理 </span>
+                    </a>
+
+                    <b class="arrow"></b>
+                </li>
+
             </ul><!-- /.nav-list -->
 
             <div class="sidebar-toggle sidebar-collapse" id="sidebar-collapse">
