--- a/core/templates/user/index.html
+++ b/core/templates/user/index.html
@@ -17,28 +17,81 @@
         <div class="col-xs-12">
 
             <!--用户数-->
-            <div class="col-lg-3 col-md-6">
-                <div class="panel panel-danger">
-                    <div class="panel-heading">
-                        <div class="row">
-                            <div class="col-xs-3">
-                                <i class="glyphicon glyphicon-user"></i>
-                            </div>
-                            <div class="col-xs-9 text-right">
-                                <div class="huge">{{ flowSum }}</div>
-                                <div>用户总数</div>
-                            </div>
-                        </div>
-                    </div>
-                    <a href="/r/userinfo">
-                        <div class="panel-footer">
-                            <span class="pull-left">更多..</span>
-                            <span class="pull-right"><i class="glyphicon glyphicon-menu-right"></i></span>
-                            <div class="clearfix"></div>
-                        </div>
-                    </a>
-                </div>
-            </div>
+            <div class="widget-box">
+									<div class="widget-header widget-header-blue widget-header-flat">
+										<h4 class="widget-title lighter">流程图示例</h4>
+
+
+									</div>
+
+									<div class="widget-body">
+										<div class="widget-main">
+											<div id="fuelux-wizard-container" class="no-steps-container">
+												<div>
+													<ul class="steps" style="margin-left: 0">
+														<li data-step="1" class="active">
+															<span class="step">1</span>
+															<span class="title">第一次交钱</span>
+														</li>
+
+														<li data-step="2" class="active">
+															<span class="step">2</span>
+															<span class="title">第二次交钱</span>
+														</li>
+
+														<li data-step="3">
+															<span class="step">3</span>
+															<span class="title">第三次交钱</span>
+														</li>
+
+														<li data-step="4">
+															<span class="step">4</span>
+															<span class="title">最后一次交钱</span>
+														</li>
+													</ul>
+												</div>
+
+
+
+
+
+											</div>
+{% for f in flows %}
+    <div id="fuelux-wizard-container" class="no-steps-container">
+												<div>
+													<ul class="steps" style="margin-left: 0">
+														<li data-step="1" class="active">
+															<span class="step">1</span>
+															<span class="title">第一次交钱</span>
+														</li>
+
+														<li data-step="2" class="active">
+															<span class="step">2</span>
+															<span class="title">第二次交钱</span>
+														</li>
+
+														<li data-step="3">
+															<span class="step">3</span>
+															<span class="title">第三次交钱</span>
+														</li>
+
+														<li data-step="4">
+															<span class="step">4</span>
+															<span class="title">最后一次交钱</span>
+														</li>
+													</ul>
+												</div>
+
+
+
+
+
+											</div>
+                                            {% endfor %}
+
+										</div><!-- /.widget-main -->
+									</div><!-- /.widget-body -->
+								</div>
         </div>
         <!-- /.row -->
 
