--- a/core/templates/backend/master_admin.html
+++ b/core/templates/backend/master_admin.html
@@ -476,7 +476,7 @@
                     <b class="arrow"></b>
                 </li>
 
-                <li id="li_user" class="">
+                <li id="li_flow" class="">
                     <a href="/r/flow">
                         <i class="menu-icon fa fa-pencil-square-o"></i>
                         <span class="menu-text"> 流程管理 </span>
