--- a/core/templates/backend/flow.html
+++ b/core/templates/backend/flow.html
@@ -7,7 +7,7 @@
         <div class="breadcrumbs" id="breadcrumbs">
             <ul class="breadcrumb">
                 <li><i class="icon-sitemap"></i><a href="/admin">系统管理</a></li>
-                <li class="active">文章内容发布</li>
+                <li class="active">流程图</li>
             </ul><!-- .breadcrumb -->
         </div>
         <!--导航条结束-->
@@ -21,8 +21,10 @@
                         <a onclick="$('input[name=checkbox]').each(function(){if(this.checked){this.checked=false;}else{this.checked=true;}});" class="btn btn-default" draggable="false">反选</a>
                         <a onclick="postdel()" class="btn btn-danger" draggable="false">删除</a>
                     </div>
-                    <div role="group" class="btn-group pull-right">
-                        <a href="/r/editcontent?id=new" title="" data-placement="bottom" data-toggle="tooltip" class="btn btn-primary"  data-original-title="添加新的流程">添加流程</a>
+                    <div role="toolbar" class="btn-toolbar operation pull-right">
+                        <div role="group" class="btn-group">
+                            <a onclick="" class="btn btn-primary" draggable="false" data-target="#add" data-toggle="modal">新增流程</a>
+                        </div>
                     </div>
                 </h1>
 
@@ -42,6 +44,8 @@
                         </tbody>
                     </table>
                 </div>
+
+
                 <footer class="message_footer">
                     <nav>
                         <div role="toolbar" class="btn-toolbar operation">
@@ -63,7 +67,7 @@
                                     return cookieValue;
                                 }
                                 var csrftoken = getCookie('csrftoken');
-                                $('#li_content').attr('class','active');
+                                $('#li_flow').attr('class','active');
                                 function  ajax_refresh_table() {
                                     $('#tbody_content').html('');
                                     NProgress.start();
@@ -110,6 +114,187 @@
                     </nav>
                 </footer>
             </form>
+
+            <div aria-labelledby="myModalLabel" role="dialog" tabindex="-1" id="add" class="modal fade">
+                <div role="document" class="modal-dialog" >
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button aria-label="Close" data-dismiss="modal" class="close" type="button"><span aria-hidden="true">×</span></button>
+                            <h4 id="myModalLabel" class="modal-title">新增轮播项</h4>
+                        </div>
+                        <div class="modal-body">
+                            <form class="form-horizontal" method="post" id="addform" action="/r/addflow" enctype="multipart/form-data">
+                                {% csrf_token %}
+                                <div class="form-group">
+                                    <label class="control-label col-xs-2 col-sm-2 no-padding-right">流程名称:</label>
+                                    <div class="col-xs-9 col-sm-9">
+                                        <div class="clearfix"><input type="text" name="title" class="col-xs-12 col-sm-12"></div>
+                                    </div>
+                                </div>
+
+                                <div class="space-2"></div>
+
+                                <div class="modal-footer">
+                                    <button data-dismiss="modal" class="btn btn-default" type="button">关闭</button>
+                                    <input type="button" onclick="su()" class="btn btn-primary" value="保存"/>
+                                </div>
+                                <script>
+                                    function getCookie(name) {
+                                        var cookieValue = null;
+                                        if (document.cookie && document.cookie !== '') {
+                                            var cookies = document.cookie.split(';');
+                                            for (var i = 0; i < cookies.length; i++) {
+                                                var cookie = jQuery.trim(cookies[i]);
+                                                // Does this cookie string begin with the name we want?
+                                                if (cookie.substring(0, name.length + 1) === (name + '=')) {
+                                                    cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+                                                    break;
+                                                }
+                                            }
+                                        }
+                                        return cookieValue;
+                                    }
+                                    var csrftoken = getCookie('csrftoken');
+                                    function postdel() {
+                                        if(confirm('确定删除吗')){
+                                            var s=[];
+                                            $('input:checked[name=checkbox]').each(function (index,item) {
+                                                //if($(item).checked==true) {
+                                                s .push ($(item).val());
+                                                //}
+                                            });
+                                            $.post('/r/delcarousel',{'ids':s,'csrfmiddlewaretoken':csrftoken},function (data) {
+                                                data=JSON.parse(data);
+                                                $.gritter.add({
+                                                    // (string | mandatory) the heading of the notification
+                                                    title: '成功',
+                                                    // (string | mandatory) the text inside the notification
+                                                    text: data.msg,
+                                                    class_name: 'gritter-success'
+                                                });
+                                                ajax_refresh_table();
+                                            })
+                                        }}
+
+                                    function su() {
+                                        NProgress.start();
+                                        var formData = new FormData($( "#addform" )[0]);
+                                        $.ajax({
+                                            url: "/r/addflow",
+                                            type: "POST",
+                                            data: formData,
+                                            /**
+                                             *必须false才会自动加上正确的Content-Type
+                                             */
+                                            enctype:"multipart/form-data",
+                                            contentType: false,
+                                            /**
+                                             * 必须false才会避开jQuery对 formdata 的默认处理
+                                             * XMLHttpRequest会对 formdata 进行正确的处理
+                                             */
+                                            processData: false,
+                                            success: function (data) {
+                                                data=JSON.parse(data);
+                                                if (data.status == "200") {
+                                                    $.gritter.add({
+                                                        // (string | mandatory) the heading of the notification
+                                                        title: '成功上传',
+                                                        // (string | mandatory) the text inside the notification
+                                                        text: '成功添加新的流程项。'+data.msg,
+                                                        class_name: 'gritter-success'
+                                                    });
+                                                    ajax_refresh_table();
+                                                }
+                                                if (data.status == "500") {
+                                                    $.gritter.add({
+                                                        // (string | mandatory) the heading of the notification
+                                                        title: '失败',
+                                                        // (string | mandatory) the text inside the notification
+                                                        text: data.msg,
+                                                        class_name: 'gritter-warning'
+                                                    });
+                                                }
+                                                NProgress.done();
+                                            },
+                                            error: function () {
+                                                alert("上传失败！");
+                                                NProgress.done();
+                                            }
+                                        });
+
+                                    }
+                                    function edit(e) {
+
+                                        NProgress.start();
+                                        var formData = new FormData($( "#editform_"+e )[0]);
+                                        $.ajax({
+                                            url: "/r/editflow",
+                                            type: "POST",
+                                            data: formData,
+                                            /**
+                                             *必须false才会自动加上正确的Content-Type
+                                             */
+                                            enctype:"multipart/form-data",
+                                            contentType: false,
+                                            /**
+                                             * 必须false才会避开jQuery对 formdata 的默认处理
+                                             * XMLHttpRequest会对 formdata 进行正确的处理
+                                             */
+                                            processData: false,
+                                            success: function (data) {
+                                                data=JSON.parse(data);
+                                                if (data.status == "200") {
+                                                    $.gritter.add({
+                                                        // (string | mandatory) the heading of the notification
+                                                        title: '成功上传',
+                                                        // (string | mandatory) the text inside the notification
+                                                        text: '成功添加新的轮播项。'+data.msg,
+                                                        class_name: 'gritter-success'
+                                                    });
+                                                    ajax_refresh_table();
+                                                    $('.modal-backdrop.fade.in').remove();
+                                                }
+                                                if (data.status == "500") {
+                                                    $.gritter.add({
+                                                        // (string | mandatory) the heading of the notification
+                                                        title: '失败',
+                                                        // (string | mandatory) the text inside the notification
+                                                        text: data.msg,
+                                                        class_name: 'gritter-warning'
+                                                    });
+                                                }
+                                                NProgress.done();
+                                            },
+                                            error: function () {
+                                                alert("上传失败！");
+                                                NProgress.done();
+                                            }
+                                        });
+
+                                    }
+
+
+                                    function add_flow(e) {
+{#                                        "+count+"#}
+{#                                        count += 1;#}
+                                        var flow_name = $('#flowname_'+e).val();
+                                        $('#flowstep_'+e).append("<li data-step='1' class='complete'> <span class='step'> 1 </span> <span class='title'>"+flow_name+"</span></li>");
+{#                                        NProgress.start();#}
+                                        $('#flowname_'+e).val("");
+{#                                        $.get('/r/getflow',function (data) {#}
+{#                                            $('#tbody_content').append(data);#}
+{#                                            NProgress.done();#}
+{#                                        });#}
+                                    }
+                                </script>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+
+
+            </div>
+
         </div>
         <!--内容结束-->
 
