--- a/core/templates/backend/inclusion_tag_flow.html
+++ b/core/templates/backend/inclusion_tag_flow.html
@@ -6,64 +6,41 @@
             <span class="lbl"></span>
         </td>
         <td class="article-title">{{ flow.name }}</td>
-        <td >{{ flow.user.count }}</td>
+        <td >{{ flow.orderId }}</td>
         <td>{{ flow.dimDate }}</td>
-        <td><a class="btn btn-primary btn-xs btn-github block " data-target="#edit_{{ flow.id }}" data-toggle="modal" href="">修改流程</a>
+        <td>
+{#            <a class="btn btn-primary btn-xs btn-github block" href="editflowgroup?id={{ flow.id }}" draggable="false" >修改流程</a>#}
+            <a class="btn btn-primary btn-xs btn-github block " data-target="#edit_{{ flow.id }}" data-toggle="modal" href="">修改子流程</a>
             <div aria-labelledby="myModalLabel" role="dialog" tabindex="-1" id="edit_{{ flow.id }}" class="modal fade ">
                 <div role="document" class="modal-dialog modal-lg" >
                     <div class="modal-content">
                         <div class="modal-header">
                             <button aria-label="Close" data-dismiss="modal" class="close" type="button"><span aria-hidden="true">×</span></button>
-                            <h4 id="myModalLabel" class="modal-title">修改流程--{{ flow.name }}</h4>
+                            <h4 id="myModalLabel" class="modal-title">修改子流程</h4>
                         </div>
                         <div class="modal-body">
                             <form class="form-horizontal" method="post" id="editform_{{ flow.id }}" action="/r/editflow" enctype="multipart/form-data">
                                 {% csrf_token %}
 
                                 <input name="id" type="hidden" value="{{ flow.id }}">
+
                                 <div class="form-group">
-                                    <label class="control-label col-xs-2 col-sm-2 no-padding-right">轮播标题:</label>
+                                    <label class="control-label col-xs-2 col-sm-2 no-padding-right">子流程名称:</label>
                                     <div class="col-xs-9 col-sm-9">
-                                        <div class="clearfix"><input type="text" name="title" class="col-xs-12 col-sm-12" value="1"></div>
+                                        <div class="clearfix"><input type="text" id="flowname" name="flowname" class="col-xs-4 col-sm-4" placeholder="子流程说明" value="{{ flow.name }}"></div>
                                     </div>
                                 </div>
 
-                                <div>
-                                    <ul class="steps" style="margin-left: 0" id="flowstep_{{ flow.id }}">
-{#                                        <li data-step="1">#}
-{#                                            <span class="step">1</span>#}
-{#                                            <span class="title">Validation states</span>#}
-{#                                        </li>#}
-{##}
-{#                                        <li data-step="2">#}
-{#                                            <span class="step">2</span>#}
-{#                                            <span class="title">Alerts</span>#}
-{#                                        </li>#}
-{##}
-{#                                        <li data-step="3" class="">#}
-{#                                            <span class="step">3</span>#}
-{#                                            <span class="title">Payment Info</span>#}
-{#                                        </li>#}
-{##}
-{#                                        <li data-step="4" class="">#}
-{#                                            <span class="step">4</span>#}
-{#                                            <span class="title">Other Info</span>#}
-{#                                        </li>#}
-                                    </ul>
-                                </div>
-
                                 <div class="form-group">
-                                    <label class="control-label col-xs-2 col-sm-2 no-padding-right">子流程说明:</label>
+                                    <label class="control-label col-xs-2 col-sm-2 no-padding-right">子流程序号:</label>
                                     <div class="col-xs-9 col-sm-9">
-                                        <div class="clearfix"><input type="text" id="flowname_{{ flow.id }}" name="flowname" class="col-xs-4 col-sm-4" placeholder="子流程说明"></div>
+                                        <div class="clearfix"><input type="text" id="floworder" name="floworder" class="col-xs-4 col-sm-4" placeholder="子流程序号" value="{{ flow.orderId }}"></div>
                                     </div>
                                 </div>
 
                                 <div class="modal-footer">
                                     <button data-dismiss="modal" class="btn btn-default" type="button">关闭</button>
-                                    <input type="button" onclick="add_flow({{ flow.id }})" class="btn btn-warning" value="添加子流程" />
                                     <input type="button" onclick="edit({{ flow.id }})" class="btn btn-primary" value="保存"/>
-
                                 </div>
                             </form>
                         </div>
