--- a/core/templates/backend/inclusion_tag_flowgroup.html
+++ b/core/templates/backend/inclusion_tag_flowgroup.html
@@ -9,7 +9,7 @@
         <td >{{ flow.user.count }}</td>
         <td>{{ flow.dimDate }}</td>
         <td>
-            <a class="btn btn-primary btn-xs btn-github block" href="editflowgroup?id={{ flow.id }}" draggable="false" >修改流程</a>
+            <a class="btn btn-primary btn-xs btn-github block" href="editflowgroup?id={{ flow.id }}" draggable="false" >修改流程/修改子流程内容</a>
 {#            <a class="btn btn-primary btn-xs btn-github block " data-target="#edit_{{ flow.id }}" data-toggle="modal" href="">修改流程</a>#}
 {#            <div aria-labelledby="myModalLabel" role="dialog" tabindex="-1" id="edit_{{ flow.id }}" class="modal fade ">#}
 {#                <div role="document" class="modal-dialog modal-lg" >#}
