--- a/core/templates/user/master.html
+++ b/core/templates/user/master.html
@@ -62,7 +62,7 @@
     <script src="{% static "js/nprogress.js" %}" ></script>
 </head>
 
-<body class="no-skin">
+<body class="skin-3 no-skin">
 {#<div class="navbar navbar-default" id="navbar">#}
 {#    <div class="navbar-container" id="navbar-container">#}
 {#        <div class="navbar-header pull-left"><a href="/" class="navbar-brand"><img src={% static "images/admin_logo.png" %} /></a></div>#}
@@ -449,7 +449,7 @@
 
             <ul class="nav nav-list" style="top: 0px;">
                 <li class="">
-                    <a href="/r/index">
+                    <a href="/u/index">
                         <i class="menu-icon fa fa-tachometer"></i>
                         <span class="menu-text"> 主页面 </span>
                     </a>
@@ -457,24 +457,6 @@
                     <b class="arrow"></b>
                 </li>
 
-                <li id="li_carousel" class=""><a href="/r/carousel"><i class="menu-icon fa fa-desktop"></i><span class="menu-text"> 首页轮播设置 </span></a></li>
-                <li id="li_content" class="" ><a href="/r/content"><i class="menu-icon fa fa-pencil-square-o"></i><span class="menu-text">栏目内容发布</span></a></li>
-                <li id="li_gallery" class="">
-                    <a href="/r/gallery">
-                        <i class="menu-icon fa fa-picture-o"></i>
-                        <span class="menu-text"> 图片库 </span>
-                    </a>
-
-                    <b class="arrow"></b>
-                </li>
-                <li id="li_user" class="">
-                    <a href="/r/user">
-                        <i class="menu-icon fa fa-list-alt"></i>
-                        <span class="menu-text"> 用户管理 </span>
-                    </a>
-
-                    <b class="arrow"></b>
-                </li>
             </ul><!-- /.nav-list -->
 
             <div class="sidebar-toggle sidebar-collapse" id="sidebar-collapse">
